// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sales channels DELETE /admin/sales-channels/:id should delete the requested sales channel 1`] = `
Object {
  "deleted": true,
  "id": Any<String>,
  "object": "sales-channel",
}
`;

exports[`sales channels POST /admin/sales-channels successfully creates a disabled sales channel 1`] = `
Object {
  "sales_channel": ObjectContaining {
    "is_disabled": true,
    "name": "sales channel name",
  },
}
`;

exports[`sales channels POST /admin/sales-channels successfully creates a sales channel 1`] = `
Object {
  "sales_channel": ObjectContaining {
    "description": "sales channel description",
    "is_disabled": false,
    "name": "sales channel name",
  },
}
`;
